<resources>
    <string name="app_name">SimpleWeatherApplication</string>


    <!--Preferencse-->
    <string name="default_preferences_location">Kazan, RU</string>
    <string name="default_preferences_units">metric</string>
    <string name="default_preferences_lat">51.5085</string>
    <string name="default_preferences_lon">-0.1258</string>
    <string name="sync_action">Sync</string>


    <string name="action_settings">Settings</string>
    <string name="main_weather_max">Max:</string>
    <string name="main_weather_min">Min:</string>
    <string name="main_weather_wind">Wind:</string>
    <string name="main_more">More…</string>
    <string name="humidity_title">Humidity</string>
    <string name="pressure_title">Pressure</string>
    <string name="precipitation_title">Precipitation</string>
    <string name="wind_chill_title">Wind chill</string>
    <string name="sunrise_title">Sunrise</string>
    <string name="dew_point_title">Dew Point</string>
    <string name="cloud_cover_title">Cloud Cover</string>
    <string name="sunset_title">Sunset</string>


    <string name="temp_placeholder">0°</string>
    <string name="text_placeholder">---</string>
    <string name="date_placeholder">---. 00/00/0000</string>
    <string name="locaiton_detection_title">Locaiton detection</string>
    <string name="location_detection_text">Detection current location…</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="current_weather_icon_image_description">Current weather icon</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="preferene_settings_categoty_title">Settings</string>
    <string name="preferences_temp">Temperature</string>
    <string name="temp_title">Temperature</string>
    <string name="distance_title">Distance</string>
    <string name="time_format_title">Time format</string>


</resources>
