<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/main_margin"
    android:background="@color/card_view_opacity_black"
    app:cardBackgroundColor="@color/card_view_opacity_black"
    app:cardCornerRadius="@dimen/main_card_corner_radius"
    app:cardElevation="@dimen/main_card_elevation">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/detailed_info_current_weather_icon"
            android:layout_width="@dimen/detailed_info_current_weather_icon_size"
            android:layout_height="@dimen/detailed_info_current_weather_icon_size"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/current_weather_icon_image_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_sunny" />

        <TableLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:shrinkColumns="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailed_info_current_weather_icon"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/humidity_title" />

                <TextView
                    android:id="@+id/detailed_info_table_humidity"
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/text_placeholder"
                    tools:text="87%" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/precipitation_title" />

                <TextView
                    android:id="@+id/detailed_info_table_precipitation"
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/text_placeholder"
                    tools:text="0,01778mm" />
            </TableRow>

            <!--<TableRow>-->

            <!--<TextView-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/wind_chill_title"/>-->

            <!--<TextView-->
            <!--android:id="@+id/detailed_info_table_wind_chill"-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/text_placeholder"-->
            <!--tools:text="-4"/>-->
            <!--</TableRow>-->

            <!--<TableRow>-->

            <!--<TextView-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/sunrise_title"/>-->

            <!--<TextView-->
            <!--android:id="@+id/detailed_info_table_sunrise"-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/text_placeholder"-->
            <!--tools:text="07:13"/>-->
            <!--</TableRow>-->


            <!--<TableRow>-->

            <!--<TextView-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/dew_point_title"/>-->

            <!--<TextView-->
            <!--android:id="@+id/detailed_info_table_dew_point"-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/text_placeholder"-->
            <!--tools:text="31"/>-->
            <!--</TableRow>-->

            <TableRow>

                <TextView
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/cloud_cover_title" />

                <TextView
                    android:id="@+id/detailed_info_table_cloud_cover"
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/text_placeholder"
                    tools:text="86%" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/pressure_title" />

                <TextView
                    android:id="@+id/detailed_info_table_pressure"
                    android:padding="@dimen/detailed_info_table_padding"
                    android:text="@string/text_placeholder"
                    tools:text="1016 mbar" />
            </TableRow>

            <!--<TableRow>-->

            <!--<TextView-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/sunset_title"/>-->

            <!--<TextView-->
            <!--android:id="@+id/detailed_info_table_sunset"-->
            <!--android:padding="@dimen/detailed_info_table_padding"-->
            <!--android:text="@string/text_placeholder"-->
            <!--tools:text="15:43"/>-->
            <!--</TableRow>-->
        </TableLayout>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>