<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/main_margin"
    android:layout_marginStart="@dimen/main_margin"
    android:layout_marginTop="@dimen/main_margin"
    app:cardElevation="@dimen/main_card_elevation"
    app:cardCornerRadius="@dimen/main_card_corner_radius"
    app:cardBackgroundColor="@color/card_view_opacity_black">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_placeholder"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/main_clock"
            app:layout_constraintStart_toStartOf="@+id/main_clock"
            app:layout_constraintTop_toTopOf="@id/main_weather_current_temp"
            tools:text="mon. 11/12/2017"/>

        <TextClock
            android:id="@+id/main_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/main_weather_current_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_date"
            tools:text="10:30" />


        <TextView
            android:id="@+id/main_weather_current_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="52dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/temp_placeholder"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="-20"/>

        <TextView
            android:id="@+id/main_weather_temp_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/main_weather_current_temp"
            app:layout_constraintTop_toTopOf="@+id/main_weather_current_temp"
            tools:text="°C"/>

        <ImageView
            android:id="@+id/main_weather_current_temp_icon"
            android:layout_width="@dimen/main_weather_current_temp_icon_size"
            android:layout_height="@dimen/main_weather_current_temp_icon_size"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/current_weather_icon_image_description"
            app:layout_constraintTop_toTopOf="@id/main_weather_current_temp"
            tools:src="@drawable/weather_icon_png_5"/>

        <TextView
            android:id="@+id/main_weather_current_temp_description"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:gravity="center"
            android:lines="1"
            android:text="@string/text_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_weather_current_temp"
            app:layout_constraintTop_toBottomOf="@id/main_weather_current_temp_icon"
            tools:text="Good weather Good weather " />


        <TextView
            android:id="@+id/max_temp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_weather_max"
            app:layout_constraintBottom_toTopOf="@+id/main_wind_text_view"
            app:layout_constraintStart_toStartOf="@id/main_weather_current_temp"
            app:layout_constraintTop_toBottomOf="@id/main_weather_current_temp"/>

        <TextView
            android:id="@+id/main_weather_max_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/temp_placeholder"
            app:layout_constraintStart_toEndOf="@id/max_temp_text_view"
            app:layout_constraintTop_toTopOf="@id/max_temp_text_view"/>

        <TextView
            android:id="@+id/min_temp_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/main_weather_min"
            app:layout_constraintStart_toEndOf="@id/main_weather_max_temp"
            app:layout_constraintTop_toTopOf="@id/main_weather_max_temp"/>

        <TextView
            android:id="@+id/main_weather_min_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/temp_placeholder"
            app:layout_constraintStart_toEndOf="@id/min_temp_text_view"
            app:layout_constraintTop_toTopOf="@id/min_temp_text_view"/>

        <TextView
            android:id="@+id/main_wind_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/main_weather_wind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/max_temp_text_view"/>
        <TextView
            android:id="@+id/main_wind_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_placeholder"
            app:layout_constraintBottom_toBottomOf="@id/main_wind_text_view"
            app:layout_constraintStart_toEndOf="@id/main_wind_text_view"
            app:layout_constraintTop_toTopOf="@id/main_wind_text_view"
            tools:text="East"/>

        <TextView
            android:id="@+id/main_weather_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/text_placeholder"
            app:layout_constraintStart_toEndOf="@id/main_wind_direction"
            app:layout_constraintTop_toTopOf="@+id/main_wind_direction"
            tools:text="12км/ч"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>